--- a/index.css
+++ b/index.css
@@ -1,4 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+    color: aliceblue;
+    text-decoration: none;
+}
 body {
     background-color: rgb(40, 40, 40);
     color: aliceblue;
+}
+
+header {
+    background-color: black;
+    height: 80px;
+}
+
+.contato {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+
+}
+a {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(255, 0, 0);
+    margin: 20px;
+    padding: 20px;
+    width: 200px;
+    border-radius: 20px 10px 20px 10px;
+
 }
