--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     text-decoration: none;
 }
 body {
-    background-color: rgb(40, 40, 40);
+    background-color: #0a0a0a;
     color: aliceblue;
 }
 
@@ -25,7 +25,7 @@ a {
     display: flex;
     justify-content: center;
     background-color: rgb(255, 0, 0);
-    margin: 20px;
+    margin: 15px;
     padding: 20px;
     width: 200px;
     border-radius: 20px 10px 20px 10px;
