--- a/index.css
+++ b/index.css
@@ -10,8 +10,9 @@ body {
 }
 
 header {
-    background-color: black;
+    background-color: #0a0a0a; 
     height: 80px;
+    border-bottom: 1px solid rgb(49, 49, 49);
 }
 
 .contato {
@@ -30,4 +31,9 @@ a {
     width: 200px;
     border-radius: 20px 10px 20px 10px;
 
+}
+
+img {
+    max-width: 30px;
+    margin-right: 5px;
 }
